# amalgam

./: .gitignore  ARCHITECTURE  Cargo.toml  README.md  bun.lockb  flake.nix  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wasm-bindgen-worker.js  webpack.config.js
rust-wasm/: Cargo.toml
rust-wasm/src/: audio_processor.rs  lib.rs  video_processor.rs
src/: App.tsx  app.ts  index.css  index.ts  lib.rs  main.rs
src/audio/: waveform.ts
src/components/: ClipContainer.tsx  ClipPool.tsx  ErrorNotification.tsx  ExportDialog.tsx  FileInput.tsx  Preview.tsx  PreviewPlate.tsx  RenderPlate.tsx  ThemeToggle.tsx  ThemeToggleButton.tsx  Timeline.tsx  Toolbar.tsx  VideoPlayer.tsx  VolumeControl.tsx
src/hooks/: useFFmpeg.ts  useVideoEditor.ts
src/renderer/: final-renderer.ts  preview-renderer.ts
src/styles/: timeline.css
src/timeline/: clip.ts  event-emitter.ts  preview-renderer.ts  timeline.ts  track.ts
src/utils/: darkmode.ts  debug.ts  ffmpeg-utils.ts  fileUtils.ts  timeUtils.ts
styles/: main.css
www/: index.html  index.ts  package-lock.json  package.json  tsconfig.json
