[package]
name = "video-editor-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Video Editor Team"]
description = "WebAssembly video processing library for browser-based video editor"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
    "console",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "Window",
    "Performance",
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.36"
async-trait = "0.1.71"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
